@@ -35,10 +35,14 @@ public class McpHandler {
     private static final String LOGGERS = "loggers";
     private static final String STRING = "string";
     private static final String START_TIME = "startTime";
+    private static final String END_TIME = "endTime";
     private static final String LOGGER_LEVEL = "loggerLevel";
     private static final String LEVEL = "level";
+    private static final String NAME = "name";
     private static final String STATUS = "status";
     private static final String SUCCESS = "success";
+    private static final String TOTAL = "total";
+    private static final String LOGS = "logs";
     private static McpLogAppender activeLogAppender = null;
 
     private McpHandler() {
@@ -137,22 +141,13 @@ public class McpHandler {
     }
 
     private static void handleToolsCall(PortalRegistryWebSocketClient client, Object id, Map<String, Object> params) throws IOException, ParseException {
-        if (params == null) {
-            client.sendError(id, -32602, "Missing params for tools/call");
+        ValidationResult validation = validateToolCall(params);
+        if (!validation.valid()) {
+            client.sendError(id, -32602, validation.errorMessage());
             return;
         }
-        Object nameObject = params.get("name");
-        if (!(nameObject instanceof String name) || name.isBlank()) {
-            client.sendError(id, -32602, "Missing or invalid tool name");
-            return;
-        }
-        Object argumentsObject = params.get("arguments");
-        if (argumentsObject != null && !(argumentsObject instanceof Map<?, ?>)) {
-            client.sendError(id, -32602, "Invalid tool arguments");
-            return;
-        }
-
-        Map<String, Object> args = castMapOrEmpty(argumentsObject);
+        String name = validation.toolName();
+        Map<String, Object> args = validation.arguments();
 
         switch (name) {
             case "get_service_info":
@@ -165,51 +160,12 @@ public class McpHandler {
                 client.sendResult(id, getLoggers());
                 break;
             case "set_loggers": {
-                Object loggersObject = args.get(LOGGERS);
-                if (loggersObject == null) {
-                    client.sendError(id, -32602, "Missing 'loggers' parameter");
+                LoggerValidationResult loggers = validateLoggerEntries(args.get(LOGGERS));
+                if (!loggers.valid()) {
+                    client.sendError(id, -32602, loggers.errorMessage());
                     return;
                 }
-                if (!(loggersObject instanceof List<?> loggersList)) {
-                    client.sendError(id, -32602, "'loggers' must be a list");
-                    return;
-                }
-
-                List<Map<String, String>> validatedLoggers = new ArrayList<>();
-
-                int index = 0;
-                for (Object entry : loggersList) {
-                    if (!(entry instanceof Map<?, ?> entryMap)) {
-                        client.sendError(id, -32602, "Each logger entry must be an object with 'name' and 'level' fields (invalid entry at index " + index + ")");
-                        return;
-                    }
-                    Object nameValue = entryMap.get("name");
-                    Object levelValue = entryMap.get("level");
-                    if (!(nameValue instanceof String) || ((String) nameValue).isBlank()) {
-                        client.sendError(id, -32602, "Each logger entry must contain a non-blank 'name' (invalid entry at index " + index + ")");
-                        return;
-                    }
-                    if (!(levelValue instanceof String) || ((String) levelValue).isBlank()) {
-                        client.sendError(id, -32602, "Each logger entry must contain a non-blank 'level' (invalid entry at index " + index + ")");
-                        return;
-                    }
-                    String loggerName = ((String) nameValue).trim();
-                    String levelString = ((String) levelValue).trim();
-                    try {
-                        // Validate that the level is a recognized Logback level.
-                        Level.valueOf(levelString.toUpperCase());
-                    } catch (IllegalArgumentException e) {
-                        client.sendError(id, -32602, "Invalid logger level '" + levelString + "' for logger '" + loggerName + "' at index " + index);
-                        return;
-                    }
-                    Map<String, String> validatedEntry = new HashMap<>();
-                    validatedEntry.put("name", loggerName);
-                    validatedEntry.put("level", levelString);
-                    validatedLoggers.add(validatedEntry);
-                    index++;
-                }
-
-                setLoggers(validatedLoggers);
+                setLoggers(loggers.loggers());
                 client.sendResult(id, Map.of(STATUS, SUCCESS));
                 break;
             }
@@ -227,6 +183,64 @@ public class McpHandler {
             default:
                 client.sendError(id, -32602, "Tool not found: " + name);
         }
+    }
+
+    private static ValidationResult validateToolCall(Map<String, Object> params) {
+        if (params == null) {
+            return ValidationResult.invalid("Missing params for tools/call");
+        }
+        Object nameObject = params.get(NAME);
+        if (!(nameObject instanceof String name) || name.isBlank()) {
+            return ValidationResult.invalid("Missing or invalid tool name");
+        }
+        Object argumentsObject = params.get("arguments");
+        if (argumentsObject != null && !(argumentsObject instanceof Map<?, ?>)) {
+            return ValidationResult.invalid("Invalid tool arguments");
+        }
+        return ValidationResult.valid(name, castMapOrEmpty(argumentsObject));
+    }
+
+    private static LoggerValidationResult validateLoggerEntries(Object loggersObject) {
+        if (loggersObject == null) {
+            return LoggerValidationResult.invalid("Missing 'loggers' parameter");
+        }
+        if (!(loggersObject instanceof List<?> loggersList)) {
+            return LoggerValidationResult.invalid("'loggers' must be a list");
+        }
+
+        List<Map<String, String>> validatedLoggers = new ArrayList<>();
+        int index = 0;
+        for (Object entry : loggersList) {
+            if (!(entry instanceof Map<?, ?> entryMap)) {
+                return LoggerValidationResult.invalid("Each logger entry must be an object with 'name' and 'level' fields (invalid entry at index " + index + ")");
+            }
+            String loggerName = readRequiredString(entryMap.get(NAME));
+            if (loggerName == null) {
+                return LoggerValidationResult.invalid("Each logger entry must contain a non-blank 'name' (invalid entry at index " + index + ")");
+            }
+            String levelString = readRequiredString(entryMap.get(LEVEL));
+            if (levelString == null) {
+                return LoggerValidationResult.invalid("Each logger entry must contain a non-blank 'level' (invalid entry at index " + index + ")");
+            }
+            try {
+                Level.valueOf(levelString.toUpperCase());
+            } catch (IllegalArgumentException e) {
+                return LoggerValidationResult.invalid("Invalid logger level '" + levelString + "' for logger '" + loggerName + "' at index " + index);
+            }
+            Map<String, String> validatedEntry = new HashMap<>();
+            validatedEntry.put(NAME, loggerName);
+            validatedEntry.put(LEVEL, levelString);
+            validatedLoggers.add(validatedEntry);
+            index++;
+        }
+        return LoggerValidationResult.valid(validatedLoggers);
+    }
+
+    private static String readRequiredString(Object value) {
+        if (!(value instanceof String string) || string.isBlank()) {
+            return null;
+        }
+        return string.trim();
     }
 
     private static Map<String, Object> castMapOrEmpty(Object value) {
@@ -257,7 +271,7 @@ public class McpHandler {
     private static void setLoggers(List<Map<String, String>> loggers) {
         if (loggers == null) return;
         for (Map<String, String> map : loggers) {
-            String name = map.get("name");
+            String name = map.get(NAME);
             Level level = Level.valueOf(map.get(LEVEL));
             ch.qos.logback.classic.Logger logger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(name);
             if (level != logger.getLevel()) logger.setLevel(level);
@@ -269,12 +283,12 @@ public class McpHandler {
         if (value == null) {
             throw new IllegalArgumentException("Missing required parameter: " + key);
         }
-        if (value instanceof Number) {
-            return ((Number) value).longValue();
+        if (value instanceof Number number) {
+            return number.longValue();
         }
-        if (value instanceof String) {
+        if (value instanceof String string) {
             try {
-                return Long.parseLong((String) value);
+                return Long.parseLong(string);
             } catch (NumberFormatException e) {
                 // fall through to throw below
             }
@@ -290,12 +304,12 @@ public class McpHandler {
         if (value == null) {
             throw new IllegalArgumentException("Invalid long parameter: " + key);
         }
-        if (value instanceof Number) {
-            return ((Number) value).longValue();
+        if (value instanceof Number number) {
+            return number.longValue();
         }
-        if (value instanceof String) {
+        if (value instanceof String string) {
             try {
-                return Long.parseLong((String) value);
+                return Long.parseLong(string);
             } catch (NumberFormatException e) {
                 throw new IllegalArgumentException("Invalid long parameter: " + key);
             }
@@ -305,15 +319,16 @@ public class McpHandler {
 
     private static Map<String, Object> getLogContent(Map<String, Object> args) throws IOException, ParseException {
         long startTime = parseRequiredLongArg(args, START_TIME);
-        long endTime = parseOptionalLongArg(args, "endTime", System.currentTimeMillis());
+        long endTime = parseOptionalLongArg(args, END_TIME, System.currentTimeMillis());
         Level loggerLevel = args.containsKey(LOGGER_LEVEL) ? Level.toLevel((String) args.get(LOGGER_LEVEL)) : Level.ERROR;
 
         Map<String, Map<String, Object>> logContent = new HashMap<>();
         LoggerContext lc = (LoggerContext) LoggerFactory.getILoggerFactory();
         for (ch.qos.logback.classic.Logger log : lc.getLoggerList()) {
             Map<String, Object> logMap = parseLogContents(startTime, endTime, log, loggerLevel);
-            if (logMap.size() > 0 && (Integer) logMap.get("total") > 0)
+            if (hasLogs(logMap)) {
                 logContent.put(log.getName(), logMap);
+            }
         }
         return Map.of("content", logContent);
     }
@@ -323,29 +338,40 @@ public class McpHandler {
         int total = 0;
         for (Iterator<Appender<ILoggingEvent>> it = log.iteratorForAppenders(); it.hasNext(); ) {
             Appender<ILoggingEvent> logEvent = it.next();
-            if (logEvent instanceof RollingFileAppender) {
-                Path logFile = Path.of(((RollingFileAppender<ILoggingEvent>) logEvent).getFile());
-                if (Files.exists(logFile)) {
-                    try (BufferedReader bufferedReader = Files.newBufferedReader(logFile)) {
-                        Map<String, Object> appenderResult = parseAppenderFile(bufferedReader, startTime, endTime, loggerLevel);
-                        if (appenderResult != null && appenderResult.containsKey("total") && appenderResult.containsKey("logs")) {
-                            Object totalObj = appenderResult.get("total");
-                            Object logsObj = appenderResult.get("logs");
-                            if (totalObj instanceof Integer && logsObj instanceof List) {
-                                total += (Integer) totalObj;
-                                @SuppressWarnings("unchecked")
-                                List<Map<String, Object>> logs = (List<Map<String, Object>>) logsObj;
-                                allLogs.addAll(logs);
-                            }
-                        }
-                    }
-                }
+            Map<String, Object> appenderResult = parseAppenderLogs(logEvent, startTime, endTime, loggerLevel);
+            if (hasLogs(appenderResult)) {
+                total += ((Number) appenderResult.get(TOTAL)).intValue();
+                @SuppressWarnings("unchecked")
+                List<Map<String, Object>> logs = (List<Map<String, Object>>) appenderResult.get(LOGS);
+                allLogs.addAll(logs);
             }
         }
         if (total == 0 && allLogs.isEmpty()) {
             return Collections.emptyMap();
         }
-        return Map.of("total", total, "logs", allLogs);
+        return Map.of(TOTAL, total, LOGS, allLogs);
+    }
+
+    private static Map<String, Object> parseAppenderLogs(Appender<ILoggingEvent> logEvent, long startTime, long endTime, Level loggerLevel) throws IOException, ParseException {
+        if (!(logEvent instanceof RollingFileAppender<?> rollingFileAppender)) {
+            return Collections.emptyMap();
+        }
+        Path logFile = Path.of(rollingFileAppender.getFile());
+        if (!Files.exists(logFile)) {
+            return Collections.emptyMap();
+        }
+        try (BufferedReader bufferedReader = Files.newBufferedReader(logFile)) {
+            return parseAppenderFile(bufferedReader, startTime, endTime, loggerLevel);
+        }
+    }
+
+    private static boolean hasLogs(Map<String, Object> result) {
+        return result != null
+                && result.containsKey(TOTAL)
+                && result.containsKey(LOGS)
+                && result.get(TOTAL) instanceof Number number
+                && number.intValue() > 0
+                && result.get(LOGS) instanceof List<?>;
     }
 
     private static Map<String, Object> parseAppenderFile(BufferedReader bufferedReader, long startTime, long endTime, Level loggerLevel) throws IOException, ParseException {
@@ -372,7 +398,7 @@ public class McpHandler {
                 // Ignore lines that cannot be parsed as JSON; continue scanning the log file.
             }
         }
-        return Map.of("total", index, "logs", logs);
+        return Map.of(TOTAL, index, LOGS, logs);
     }
 
     private static synchronized void startLogs(PortalRegistryWebSocketClient client, Map<String, Object> args) {
@@ -412,6 +438,26 @@ public class McpHandler {
     public static synchronized void stopLogsForClient(PortalRegistryWebSocketClient client) {
         if (activeLogAppender != null && activeLogAppender.isForClient(client)) {
             stopLogs();
+        }
+    }
+
+    private record ValidationResult(boolean valid, String toolName, Map<String, Object> arguments, String errorMessage) {
+        private static ValidationResult valid(String toolName, Map<String, Object> arguments) {
+            return new ValidationResult(true, toolName, arguments, null);
+        }
+
+        private static ValidationResult invalid(String errorMessage) {
+            return new ValidationResult(false, null, Collections.emptyMap(), errorMessage);
+        }
+    }
+
+    private record LoggerValidationResult(boolean valid, List<Map<String, String>> loggers, String errorMessage) {
+        private static LoggerValidationResult valid(List<Map<String, String>> loggers) {
+            return new LoggerValidationResult(true, loggers, null);
+        }
+
+        private static LoggerValidationResult invalid(String errorMessage) {
+            return new LoggerValidationResult(false, Collections.emptyList(), errorMessage);
         }
     }
 }
